updated with pdf support (image based pdfs only), fixed bugs, and reorganized the project

--- a/production.ini
+++ b/production.ini
@@ -1,17 +1,21 @@
 [app:main]
 use = egg:bigwebsite
 pyramid.reload_templates = false
+pyramid.default_locale_name = en
 
-sqlalchemy.url = sqlite:///webroot/data.sqlite
+sqlalchemy.url = sqlite:////webroot/data.sqlite
 auth.secret = default_auth_secret
 session.secret = default_session_secret
 hostname = hostname
 project_name = bigwebsite
+workfiles = /usr/local/bigwebsite/workfiles/
 htmlfolder = webroot_folder
 getout = getout.html
 allowed_filetypes.images = (?:\.?)(jpeg|jpg|png|gif|bmp|webp|pdf)
 
 art.uri = art/content/art/
+video.uri = videos/content/borders/
+bandcamp = https://bigwebsite.bandcamp.com/
 
 [server:main]
 use = egg:pyramid#wsgiref
