--- a/test.ini
+++ b/test.ini
@@ -10,7 +10,7 @@ auth.secret = 25F6FHJeszVPSSf5bfQ5
 session.secret = ?2HNJRWiX/gz|bk4
 hostname = coolwebsite.ddns.net
 project_name = bigwebsite
-htmlfolder = /usr/local/bigwebsite/bigwebsite/root/
+htmlfolder = /webroot
 getout = getout.html
 allowed_filetypes.images = (?:\.?)(jpeg|jpg|png|gif|bmp|webp)
 
