--- a/development.ini
+++ b/development.ini
@@ -1,6 +1,7 @@
 [app:main]
 use = egg:bigwebsite
 pyramid.reload_templates = true
+pyramid.default_locale_name = en
 #pyramid.includes = 
 #	pyramid_debugtoolbar
 #	pyramid_tm
@@ -10,11 +11,14 @@ auth.secret = default_auth_secret
 session.secret = default_session_secret
 hostname = ddns_hostname
 project_name = bigwebsite
+workfiles = /usr/local/bigwebsite/workfiles/
 htmlfolder = webroot_folder
 getout = getout.html
 allowed_filetypes.images = (?:\.?)(jpeg|jpg|png|gif|bmp|webp|pdf)
 
 art.uri = art/content/art/
+video.uri = videos/content/borders/
+bandcamp = https://bigwebsite.bandcamp.com/
 
 [server:main]
 use = egg:pyramid#wsgiref
