fixed the unit tests and added more tests

--- a/test.ini
+++ b/test.ini
@@ -1,6 +1,7 @@
 [app:main]
 use = egg:bigwebsite
 pyramid.reload_templates = true
+pyramid.default_locale_name = en
 #pyramid.includes = 
 #	pyramid_debugtoolbar
 #	pyramid_tm
@@ -10,11 +11,14 @@ auth.secret = 25F6FHJeszVPSSf5bfQ5
 session.secret = ?2HNJRWiX/gz|bk4
 hostname = coolwebsite.ddns.net
 project_name = bigwebsite
-htmlfolder = /webroot
+workfiles = /usr/local/bigwebsite/workfiles/
+htmlfolder = /usr/local/bigwebsite/unit-tests/webroot/
 getout = getout.html
-allowed_filetypes.images = (?:\.?)(jpeg|jpg|png|gif|bmp|webp)
+allowed_filetypes.images = (?:\.?)(jpeg|jpg|png|gif|bmp|webp|pdf)
 
 art.uri = art/content/art/
+video.uri = videos/content/borders/
+bandcamp = https://bigwebsite.bandcamp.com/
 
 [server:main]
 use = egg:pyramid#wsgiref
